# pytorch-jupyter-lab

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
