[tool.poetry]
name = "pytorchi-jupyter-lab"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.6"
jupyterlab-code-formatter = "^2.2.1"
lckr-jupyterlab-variableinspector = "^3.2.1"
jupyterlab-widgets = "^3.0.10"
ipywidgets = "^8.1.2"
import-ipynb = "^0.1.4"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
